# SportHub-parser

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: codeql.yaml  codeql.yml
src/: __main__.py  conf.py  main.py  process.py
src/logger/: __init__.py  _setup_logger.py
src/pdf_getter/: __init__.py  _download_file.py  _get_html_page.py  _get_pdf.py  _parse_file_url.py
src/pdf_parser/: __init__.py  _event_participants.py  _pdf_file.py  _pdf_page_text.py
tmp.example/: prev_url.txt
