[project]
name = "SportHub-parser"
version = "1.1.0"
requires-python = "==3.13.*"
dependencies = [
    "httpx>=0.28.1",
    "pymupdf>=1.24.14",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "fastapi>=0.115.5",
    "uvicorn>=0.34.0",
    "seqlog>=0.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.9.6",
]
